# analizar-links

./: .env  .env.example  .gitignore  .railwayignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  railway.toml  start_dev.sh  start_local.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  railway-deploy.yml  security.yml
nginx/: nginx.conf
postman/: analizar-links.postman_collection.json
src/: lib.rs  main.rs
src/api/: health.rs  mod.rs
src/api/middleware/: cors.rs  logging.rs  mod.rs  rate_limit.rs
src/common/: mod.rs  response.rs
src/common/config/: mod.rs
src/common/constants/: mod.rs
src/common/error/: mod.rs
src/domain/: mod.rs
src/domain/entities/: extract_job.rs  mod.rs
src/domain/events/: mod.rs
src/domain/ports/: audio_storage.rs  audio_transcoder.rs  job_cache.rs  mod.rs  video_downloader.rs
src/domain/value_objects/: audio_format.rs  job_status.rs  mod.rs  video_url.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: memory_cache.rs  mod.rs
src/infrastructure/downloader/: mod.rs  ytdlp_downloader.rs
src/infrastructure/storage/: local_storage.rs  mod.rs
src/infrastructure/transcoder/: ffmpeg_transcoder.rs  mod.rs
src/modules/: mod.rs
src/modules/extract/: mod.rs
src/modules/extract/api/: mod.rs
src/modules/extract/api/controllers/: extract_controller.rs  mod.rs
src/modules/extract/api/routes/: extract_routes.rs  mod.rs
src/modules/extract/application/: mod.rs  service.rs
src/modules/extract/application/commands/: extract_audio_command.rs  mod.rs
src/modules/extract/application/dtos/: mod.rs  requests.rs  responses.rs
src/modules/extract/application/queries/: get_job_status_query.rs  mod.rs
src/modules/extract/domain/: mod.rs
src/modules/extract/infrastructure/: mod.rs
src/startup/: cleanup.rs  mod.rs  routes.rs  server.rs  services.rs
tests/: api_integration.rs
